[package]
name = "day_18"
version = "0.1.0"
authors = ["James Lomax <james.lomax@cambridgeconsultants.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "^0", path = "../common" }
multimap = "0.8.0"
itertools = "0.8.2"
crossbeam-channel = "0.4.0"
stacker = "0.1.6"